--- a/index.html
+++ b/index.html
@@ -50,6 +50,34 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col text-center">
+          <h1 class="text-left">Working with Form Data</h1>
+          <form>
+            <fieldset>
+              <input
+                class="form-control"
+                name="quote"
+                placeholder="Quote"
+                id="quote-input"
+              />
+              <br />
+            </fieldset>
+            <fieldset>
+              <input
+                class="form-control"
+                name="quote"
+                placeholder="Your Name"
+                id="name-input"
+              />
+              <br />
+            </fieldset>
+            <div class="text-right">
+              <div class="btn btn-sm btn-success" id="magic-button">Magic</div>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
