simple guess game, hide quote submission

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col text-center">
           <h1 class="text-left">Working with Form Data</h1>
           <form>
@@ -75,6 +75,42 @@
             <div class="text-right">
               <div class="btn btn-sm btn-success" id="magic-button">Magic</div>
             </div>
+          </form>
+        </div>
+      </div> -->
+      <div class="row">
+        <div class="col text-center">
+          <h1 class="text-left">Simple Guessing Game</h1>
+          <form>
+            <fieldset>
+              <input
+                class="form-control"
+                name="quote"
+                type="number"
+                placeholder="Your Number"
+                id="master-number"
+                value='69'
+              />
+              <!-- <br /> -->
+              <div class="text-right">
+                <div class="btn btn-sm btn-success" id="hide-button">Magic</div>
+              </div>
+              <br>
+            </fieldset>
+            <fieldset>
+              <input
+                class="form-control"
+                name="quote"
+                placeholder="Your Guess"
+                type="number"
+                id="guess"
+                value="0"
+              />
+              <!-- <br /> -->
+              <div class="text-right">
+                <div class="btn btn-sm btn-success" id="guess-button">Guess</div>
+              </div>
+            </fieldset>
           </form>
         </div>
       </div>
