--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col text-center">
+          <h1 class="text-left">Can I Vote</h1>
+          <form>
+            <fieldset>
+              <input class="form-control" name="age" type="number" placeholder="Your Age" id="myAge" value='15' />
+              <div class="text-right">
+                <div class="btn btn-sm btn-success" id="check-voter">Submit</div>
+              </div>
+              <br>
+            </fieldset>
+          </form>
+        </div>
+      </div>
       <!-- <div class="row">
         <div class="col text-center">
           <h1 class="text-left">Working with Form Data</h1>
@@ -85,13 +99,12 @@
             <fieldset>
               <input
                 class="form-control"
-                name="quote"
+                name="masternum"
                 type="number"
                 placeholder="Your Number"
                 id="master-number"
                 value='69'
               />
-              <!-- <br /> -->
               <div class="text-right">
                 <div class="btn btn-sm btn-success" id="hide-button">Magic</div>
               </div>
@@ -100,13 +113,12 @@
             <fieldset>
               <input
                 class="form-control"
-                name="quote"
+                name="guessnum"
                 placeholder="Your Guess"
                 type="number"
                 id="guess"
                 value="0"
               />
-              <!-- <br /> -->
               <div class="text-right">
                 <div class="btn btn-sm btn-success" id="guess-button">Guess</div>
               </div>
@@ -114,6 +126,7 @@
           </form>
         </div>
       </div>
+     
     </div>
   </body>
 </html>
